:memo: [#4] Fix API schema
